syntax = "proto3";
package ETModel;

message LoginReq // IRequest
{
    int32 RpcId = 90;
    string Account = 1; // 帐号
    string Password = 2; // 密码
}

message LoginRsp // IResponse
{
    enum ErrorCode {
        SUCCEED = 0;
        UNKOWN_EORROR = -1;
        LOGIN_PASSWORD_WRONG = 1001;
        LOGIN_NOT_REGISTERED = 1002;
    }
    int32 RpcId = 90;
    int32 Error = 91;
    string Message = 92;

    int32 error_code = 1;
    string error_message = 2;
    int32 gid = 3;
}

message RegisterReq // IRequest
{
    int32 RpcId = 90;
    string Account = 1; // 帐号
    string Password = 2; // 密码
}

message RegisterRsp // IResponse
{
    enum ErrorCode {
        SUCCEED = 0;
        UNKOWN_EORROR = -1;
        ACCOUNT_ALREADY_EXIST = 2001;
    }
    int32 RpcId = 90;
    int32 Error = 91;
    string Message = 92;

    int32 error_code = 1;
    string error_message = 2;
    int32 gid = 3;
}

message TaskQueryReq // IRequest
{
    int32 RpcId = 90;
    //    int32 gid = 1;  // gid 没有必要，客户端没有要查询其他玩家进度信息的需求
}

message TaskQueryRsp // IResponse
{
    enum ErrorCode {
        SUCCEED = 0;
        UNKOWN_EORROR = -1;
    }
    int32 RpcId = 90;
    int32 Error = 91;
    string Message = 92;

    int32 error_code = 1;
    string error_message = 2;

    repeated int32 done_tasks = 3; // 现在已经完成的任务
    repeated int32 get_tasks = 4; // 现在接取到的任务
    int32 position_x = 5;
    int32 position_y = 6;
}

message TaskUpdateReq // IRequest
{
    int32 RpcId = 90;
    repeated int32 finished_task_ids = 1;
    repeated int32 get_task_ids = 2;
    int32 position_x = 3;
    int32 position_y = 4;
}

message TaskUpdateRsp // IResponse
{
    enum ErrorCode {
        SUCCEED = 0;
        UNKOWN_EORROR = -1;
    }
    int32 RpcId = 90;
    int32 Error = 91;
    string Message = 92;

    int32 error_code = 1;
    string error_message = 2;

}

message C2M_TestRequest // IActorLocationRequest
{
	int32 RpcId = 90;
	int64 ActorId = 93;
	string request = 1;
}

message M2C_TestResponse // IActorLocationResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	string response = 1;
}

message Actor_TransferRequest // IActorLocationRequest
{
	int32 RpcId = 90;
	int64 ActorId = 93;
	int32 MapIndex = 1;
}

message Actor_TransferResponse // IActorLocationResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

message C2G_EnterMap // IRequest
{
	int32 RpcId = 90;
}

message G2C_EnterMap // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	// 自己的unit id
	int64 UnitId = 1;
	// 所有的unit
	repeated UnitInfo Units = 2;
}

message UnitInfo
{
	int64 UnitId  = 1;

	float X = 2;
	float Y = 3;
	float Z = 4;
}

message M2C_CreateUnits // IActorMessage
{
	int32 RpcId = 90;
	int64 ActorId = 93;
    repeated UnitInfo Units = 1;
}

message Frame_ClickMap // IActorLocationMessage
{
	int32 RpcId = 90;
	int64 ActorId = 93;
	int64 Id = 94;
	
	float X = 1;
	float Y = 2;
	float Z = 3;
}

message M2C_PathfindingResult // IActorMessage
{
	int64 ActorId = 93;
	
	int64 Id = 1;

	float X = 2;
	float Y = 3;
	float Z = 4;
	
	repeated float Xs = 5;
	repeated float Ys = 6;
	repeated float Zs = 7;
}


message C2R_Ping // IRequest
{
	int32 RpcId = 90;
}

message R2C_Ping // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

message G2C_Test // IMessage
{
}

message C2M_Reload // IRequest
{
	int32 RpcId = 90;
	string Account = 1;
	string Password = 2;
}

message M2C_Reload // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}